app/assets/stylesheets/home/dataset_list.sass
.datasets
  position: absolute
  top: 0
  left: 0
  z-index: 5
  height: 0

  h1
    display: block
    background: #E8E7E5
    color: #6B6B6A
    height: 40px
    font: 16px/40px 'MuseoSans-500', sans-serif
    line-height: 40px
    padding: .15em 1em 0 1em
    border: 1px solid #ddd
    border-width: 0 1px 1px 0

  .search-results
    float: left

.scroll-pane
  width: 383px
  height: 590px /* 630px - 40px (h1 height) */
  background-color: #F8F7F4
  overflow: auto
  border-right: 1px solid #ddd

  &:focus
    outline: none

.dataset-list
  li
    cursor: pointer
    border-bottom: 1px solid #ddd
    color: #999
    position: relative

    &:first-child
      border-top: 0

    &:hover, &.active
      background-color: white

  a
    text-decoration: none

  .title
    margin: 0 0 .75em
    color: $blue
    font: 15px 'MuseoSans-500'
    max-width: 20em

  .format
    margin-top: .75em

  .icon-angle-circled-right
    display: none
    position: absolute
    top: 1.45em
    right: 1.5em
    color: $blue
    line-height: 1.75em

  li:hover .icon-angle-circled-right
    display: block

  li + li
    border-top: none

  .arrow
    opacity: 0
    color: $blue
    text-transform: uppercase
    font-family: 'MuseoSans-500'

    i
      display: inline-block
      width: 16px
      font-size: .9em
      position: relative
      bottom: 1px

  li:hover .arrow
    opacity: 1

  a.btn-white
    display: none
    float: right
    padding: .3em .5em .1em
    position: relative
    bottom: .35em

  li.active .btn-white
    display: initial

  .categories
    max-width: 22em

.dataset-info
  padding: 1.5em 1em
  margin-left: 16px
  border-right: 7px solid transparent

  span
    display: inline-block

.additional-info
  position: relative
  overflow: hidden
  height: 0
  opacity: 0
  transition: all 200ms

  &.visible
    border-top: 1px solid #DDD
    min-height: 2em
    overflow: visible
    height: auto
    margin-top: 1em
    padding-top: .5em
    opacity: 1

  .buttons
    position: absolute
    top: 1em
    right: 0
    color: $blue
    font-size: 14px

    a
      color: $blue
      display: inline-block
      vertical-align: middle
      width: 14px
      height: 14px
      margin: 0 0 0 .25em
      transition: all .5s

      &:hover
        color: #377DB4

    .icon-esri
      display: inline-block
      width: 14px
      height: 14px
      background: image-url('esri-logo.svg') no-repeat center center
      transition: none

      &:hover
        background-image: image-url('esri-logo-hover.svg')

.additional-info > span
  margin: .75em .25em .75em 0

span:not(.ng-hide) ~ .prepend-pipe
  border-left: 1px solid #D4D4D4
  padding-left: .5em
  margin-left: .25em

  &.arrow
    padding-left: .25em

.prepend-symbol
  padding-left: 1.4em
  background-repeat: no-repeat
  background-position: top left
  height: 14px
  line-height: 17px

span + .prepend-symbol
  background-position: 7% top
  padding-left: 1.7em

.point
  background-image: image-url('point.png')
  padding-left: 1.2em

  @media #{$retina}
    background-image: image-url('point@2x.png')
    background-size: 11px 14px

.polygon
  background-image: image-url('polygon.png')

  @media #{$retina}
    background-image: image-url('polygon@2x.png')
    background-size: 14px 14px

.raster
  background-image: image-url('raster.png')

  @media #{$retina}
    background-image: image-url('raster@2x.png')
    background-size: 14px 14px

// Tooltips

.dataset-info
  .tooltip
    position: relative
    background: #ffffff
    border: 1px solid #ddd
    box-shadow: 0 1px 3px #ddd
    border-radius: 4px
    padding: .5em .75em
    min-width: 11em
    z-index: 1
    display: none

    &:after, &:before
      top: 100%
      left: 50%
      border: solid transparent
      content: " "
      height: 0
      width: 0
      position: absolute
      pointer-events: none

    &:after
      border-color: rgba(255, 255, 255, 0)
      border-top-color: #ffffff
      border-width: 5px
      margin-left: -5px

    &:before
      border-color: rgba(221, 221, 221, 0)
      border-top-color: #ddd
      border-width: 6px
      margin-left: -6px

  .category
    position: relative
    transition: color .5s

    &:hover
      color: $blue

      .tooltip
        color: #999
        display: inline-block

  .tooltip-container
    position: absolute
    bottom: 1.5em
    left: -2em

// Colourful right borders on hover/active

li.active.type21 .dataset-info, li.type21:hover .dataset-info
  border-right-color: #734c00

li.active.type22 .dataset-info, li.type22:hover .dataset-info
  border-right-color: #a8a800

li.active.type13 .dataset-info, li.type13:hover .dataset-info
  border-right-color: #FFAA00

li.active.type14 .dataset-info, li.type14:hover .dataset-info
  border-right-color: #A900E6

li.active.type6  .dataset-info, li.type6:hover  .dataset-info
  border-right-color: #267300

li.active.type7  .dataset-info, li.type7:hover  .dataset-info
  border-right-color: #55FF00

li.active.type8  .dataset-info, li.type8:hover  .dataset-info
  border-right-color: #E6E600

li.active.type11 .dataset-info, li.type11:hover .dataset-info
  border-right-color: #66CC99

li.active.type9  .dataset-info, li.type9:hover  .dataset-info
  border-right-color: #CD6666

li.active.type10 .dataset-info, li.type10:hover .dataset-info
  border-right-color: #A80000

li.active.type1  .dataset-info, li.type1:hover  .dataset-info
  border-right-color: #CC66CC

li.active.type17 .dataset-info, li.type17:hover .dataset-info
  border-right-color: #99B3CC

li.active.type16 .dataset-info, li.type16:hover .dataset-info
  border-right-color: #E1E73D

li.active.type15 .dataset-info, li.type15:hover .dataset-info
  border-right-color: #399CF0

li.active.type4  .dataset-info, li.type4:hover  .dataset-info
  border-right-color: #98B285

li.active.type5  .dataset-info, li.type5:hover  .dataset-info
  border-right-color: #B9C47A

li.active.type3  .dataset-info, li.type3:hover  .dataset-info
  border-right-color: #B3C1D1

li.active.type19 .dataset-info, li.type19:hover .dataset-info
  border-right-color: #109489

li.active.type28 .dataset-info, li.type28:hover .dataset-info
  border-right-color: #ecd906

li.active.type27 .dataset-info, li.type27:hover .dataset-info
  border-right-color: #43c2d9

li.active.type26 .dataset-info, li.type26:hover .dataset-info
  border-right-color: #5c83c4

li.active.type29 .dataset-info, li.type29:hover .dataset-info
  border-right-color: #ff0000

li.active.type30 .dataset-info, li.type30:hover .dataset-info
  border-right-color: #59c3e2

// Scrollbar

.jspVerticalBar
  left: 0
  background: none

.jspPane
  position: absolute
  width: 100% !important
  margin-left: 0 !important

.jspTrack
  background: none
  padding: 0 5px

.jspCap
  display: block

.jspVerticalBar .jspCap
  height: 5px

.jspDrag
  background: #B7B6B7
  border-radius: 20px
  width: 10px

